New Crowdin updates (#542)
* New translations en.json (Finnish)

* New translations en.json (Italian)

* New translations en.json (Norwegian)

* New translations en.json (Spanish, Mexico)

* New translations en.json (Spanish, Mexico)

* New translations en.json (Kannada)

* New translations InfoPlist.strings (Kannada)

* New translations en.json (Serbian (Cyrillic))

* New translations en.json (Polish)

* New translations en.json (Hungarian)

* New translations en.json (Swedish)

* New translations en.json (Chinese Traditional)

* New translations en.json (Croatian)

* New translations en.json (Romanian)

* New translations en.json (French)

* New translations en.json (Spanish)

* New translations en.json (Afrikaans)

* New translations en.json (Arabic)

* New translations en.json (Bulgarian)

* New translations en.json (Catalan)

* New translations en.json (Czech)

* New translations en.json (Danish)

* New translations en.json (German)

* New translations en.json (Greek)

* New translations en.json (Basque)

* New translations en.json (Finnish)

* New translations en.json (Hebrew)

* New translations en.json (Italian)

* New translations en.json (Japanese)

* New translations en.json (Korean)

* New translations en.json (Dutch)

* New translations en.json (Norwegian)

* New translations en.json (Portuguese)

* New translations en.json (Russian)

* New translations en.json (Serbian (Cyrillic))

* New translations en.json (Turkish)

* New translations en.json (Ukrainian)

* New translations en.json (Chinese Simplified)

* New translations en.json (Vietnamese)

* New translations en.json (Portuguese, Brazilian)

* New translations en.json (Indonesian)

* New translations en.json (Spanish, Mexico)

* New translations en.json (Hindi)

* New translations en.json (English, United States)

* New translations en.json (Sinhala)

* New translations en.json (Kannada)

* New translation

--- a/translations/ca.json
+++ b/translations/ca.json
@@ -90,7 +90,9 @@
     "error_no_username": "Manca nom d'usuari/e-mail",
     "error_no_password": "Manca la contrasenya",
     "error_internet": "Sense connexió a internet",
-    "error_request_could_not_be_completed": "La teva sol·licitud no s'ha pogut completar."
+    "error_request_could_not_be_completed": "La teva sol·licitud no s'ha pogut completar.",
+    "error_no_client": "L''autenticació del client ha fallat a causa d''un client desconegut, manca d''autenticació del client o per un mètode d''autenticació no suportat.",
+    "error_grant_invalid": "L''autorització proporcionada és nul·la, ha expirat, ha estat revocada, no s''ajusta a la redirecció URI utilitzada a la petició d''autorització, o ha estat emesa per a un altre client."
   },
   "inat_signup": {
     "welcome": "Benvingut a Seek!",
