--- a/translations/ru.json
+++ b/translations/ru.json
@@ -90,7 +90,9 @@
     "error_no_username": "Отсутствует имя пользователя / email",
     "error_no_password": "Отсутствует пароль",
     "error_internet": "Нет подключения к Интернету",
-    "error_request_could_not_be_completed": "Не удаётся выполнить ваш запрос."
+    "error_request_could_not_be_completed": "Не удаётся выполнить ваш запрос.",
+    "error_no_client": "Сбой аутентификации из-за неизвестного клиента, отсутствия аутентификации или неподдерживаемого метода аутентификации.",
+    "error_grant_invalid": "Предоставленное разрешение на авторизацию недействительно, срок его действия истёк, оно отозвано, не соответствует URI перенаправления, использованному в запросе на авторизацию, или было выдано другому клиенту."
   },
   "inat_signup": {
     "welcome": "Добро пожаловать в Seek!",
