--- a/translations/uk.json
+++ b/translations/uk.json
@@ -90,7 +90,9 @@
     "error_no_username": "Відсутнє ім'я користувача / електронна пошта",
     "error_no_password": "Відсутній пароль",
     "error_internet": "Немає з’єднання з Інтернетом",
-    "error_request_could_not_be_completed": "Не можливо виконати ваш запит."
+    "error_request_could_not_be_completed": "Не можливо виконати ваш запит.",
+    "error_no_client": "Автентифікація клієнта не вдалася за відстуності клієнта, не було включено автентифікацію клієнта або непідтримувався метод автентифікації.",
+    "error_grant_invalid": "Надана авторизація є недійсною, простроченою, відкликаною, не відповідає URI перенаправлення, використаному в запиті на авторизацію, або була видана іншому клієнту."
   },
   "inat_signup": {
     "welcome": "Ласкаво просимо до Seek!",
