--- a/translations/el.json
+++ b/translations/el.json
@@ -90,7 +90,9 @@
     "error_no_username": "Λείπει όνομα χρήστη / email",
     "error_no_password": "Λείπει ο κωδικός πρόσβασης",
     "error_internet": "Δεν υπάρχει σύνδεση στο Διαδίκτυο",
-    "error_request_could_not_be_completed": "Your request could not be completed."
+    "error_request_could_not_be_completed": "Your request could not be completed.",
+    "error_no_client": "Η ταυτοποίηση πελάτη απέτυχε εξαιτίας άγνωστου πελάτη, έλλειψης ταυτοποίησης πελάτη ή μη υποστηριζόμενης μεθόδου ταυτοποίησης.",
+    "error_grant_invalid": "Η δοθείσα παραχώρηση εξουσιοδότησης είναι άκυρη ή έχει λήξει ή έχει ανακληθεί ή δεν αντιστοιχεί στο URI ανακατεύθυνσης που χρησιμοποιήθηκε στην αίτηση εξουσιοδότησης ή έχει εκδοθεί σε άλλο πελάτη."
   },
   "inat_signup": {
     "welcome": "Καλώς ήρθατε στο Seek!",
