--- a/translations/es-MX.json
+++ b/translations/es-MX.json
@@ -90,7 +90,9 @@
     "error_no_username": "Falta nombre de usuario / email",
     "error_no_password": "Falta contraseña",
     "error_internet": "No hay conexión a internet",
-    "error_request_could_not_be_completed": "Tu solicitud no se ha podido completar."
+    "error_request_could_not_be_completed": "Tu solicitud no se ha podido completar.",
+    "error_no_client": "La autenticación del cliente falló debido a que el cliente es desconocido, no se incluyó autenticación del cliente o el método de autenticación no está soportado.",
+    "error_grant_invalid": "La concesión de autorización proporcionada no es válida, caducó, se revocó, no coincide con el URI de redirección utilizado en la solicitud de autorización o se emitió para otro cliente."
   },
   "inat_signup": {
     "welcome": "¡Bienvenido a Seek!",
@@ -686,8 +688,8 @@
     "seasonality_option_1": "Mostrar estacionalidad basada en observaciones mundiales de iNaturalist",
     "seasonality_option_2": "Mostrar estacionalidad basada en observaciones de iNaturalist cerca de mi ubicación actual (especies no encontradas cerca de mi ubicación no tendrán estacionalidad)",
     "donate_ios": "Por favor visita el siguiente enlace para hacer una donación a Seek:",
-    "change_language": "Switch the in-app language to {{language}}?",
-    "confirm": "Confirm"
+    "change_language": "¿Cambiar el idioma de la aplicación a {{language}}?",
+    "confirm": "Confirmar"
   },
   "seek_challenges": {
     "badge": "Ver insignia",
@@ -855,7 +857,7 @@
     "logged_in_bullet_3": "Tus observaciones de Seek NO están copiadas en iNaturalist. Si borras Seek se borrarán todas las observaciones de tu dispositivo.",
     "upload_and_track_obs_using_inat": "Sube y da seguimiento a tus observaciones usando la aplicación iNaturalist o visitando inaturalist.org.\n\n¡Gracias por ser parte de esta comunidad!",
     "x_seen_by_user": "{{speciesName}} visto por {{user}}",
-    "about_inat_internet_error": "You are logged in to iNaturalist, but we need the internet to show details. Tap to try again."
+    "about_inat_internet_error": "Estás conectado a iNaturalist, pero necesitamos Internet para mostrar detalles. Pulsa para intentarlo de nuevo."
   },
   "seek_2021_challenges": {
     "august_2021_challenge_name": "Desafio de Artrópodos Depredadores",
@@ -926,75 +928,75 @@
     "november_2022_mission_1": "Encuentre 4 especies de:\n\nFamilia Brassicaceae (Mostazas);\nFamilia Lamiaceae (Mentas);\nFamilia Poaceae (Pastos);\nOrden Blattodea (Cucarachas y Termitas);\nOrden Rodentia (Roedores);\nOrden Columbiformes (Palomas y parientes);\nFamilia Corvidae (Cuervos, Charas y parientes);\nGénero Passer (Gorriones);\nGénero Acridotheres (Mynas);\nInfraorder Gekkota (Geckos)",
     "november_2022_description_some_species_well_adapted": "Algunas especies están bien adaptadas a las zonas desarrolladas. Incluso en las ciudades, se puede encontrar biodiversidad silvestre en grietas en el pavimento, lotes vacíos, al visitar jardines e incluso en nuestros hogares (tal vez como visitantes no deseados).",
     "november_2022_action_change_location": "Cambia la ubicación de \"especies cercas vistas\" para buscar en una ciudad lejos de ti. ¿Qué especies se ven cerca de allí? ¿Alguna de ellas es igual o similar a las especies que se ven cerca de ti?",
-    "december_2022_challenge_name_decomposers": "Decomposers Challenge"
+    "december_2022_challenge_name_decomposers": "Desafío de Descomponedores"
   },
   "seek_2023_challenges": {
-    "january_2023_challenge_name_habitats": "Habitats Challenge",
-    "february_2023_challenge_name_climate_change": "Climate Change Challenge",
-    "february_2023_description_climate_change": "Climate change is not just affecting the frozen worlds at our planet’s poles. Rising temperatures and changing weather patterns can cause species to move out of habitats that become uncomfortable and into new areas. It can also mean that changes linked to seasons (known as “phenology”) such as leaf fall and flowering start to take place at different times. This may cause problems for other species that are hard to predict. Seek out your local plant life and see how your local environment may be changing.",
-    "february_2023_action_climate_change": "Look up your favorite plant on the iNaturalist website and explore the “plant phenology” graph on its taxon page. These charts come from “annotations” for flower buds, flowers, or fruits on the observations posted to iNaturalist. You can help add them by logging in on the iNaturalist website.",
-    "march_2023_challenge_name_lakes_ponds": "Lakes and Ponds Challenge",
-    "april_2023_challenge_name_nature": "Nature Challenge",
-    "april_2023_description_nature": "We are not alone on our planet! Wildlife is always around us whether we notice it or not. In our homes, gardens, towns, and cities there are hidden worlds to be discovered. Seek in and around your home, and you may be surprised by how many wild neighbours you find.",
-    "april_2023_action_nature": "Seek out plants, fungi, bugs, birds, and animals. Watch out for signs of more elusive life – scat (poo), fur, nests, tracks, and webs can all give clues to other creatures that share your home.",
-    "may_2023_challenge_name_protected_areas": "Protected Areas Challenge",
-    "may_2023_description_protected_areas": "From the deepest forest to the smallest park, we share our planet with an incredible variety of living things, each adapted to the particular environment in which they live. Seek out a local nature hotspot and see how many different types of living thing you can find. Along the way, you’ll learn what characteristics make these different groups of organisms different from each other!",
-    "june_2023_challenge_name_plant_eaters": "Plant Eaters Challenge",
-    "june_2023_action": "What kinds of plants do you eat? What parts of the plant do they come from? What kinds of animals also like to eat those plants?",
-    "july_2023_challenge_name_food_web": "Food Web Challenge",
-    "july_2023_description_plant_eaters": "Every species in a community is connected in a food web. Producers capture energy from the sun, herbivores eat plants, carnivores eat other animals, and decomposers consume dead organisms. Seek out different levels in your local web of life, and learn how each one enables other species to survive.",
-    "july_2023_action_plant_eaters": "Did you see any herbivores in action, such as a caterpillar eating a leaf or a bird eating seeds? Did you see any carnivores in action, perhaps a spider or a mantis with prey?",
-    "august_2023_challenge_name_insect": "Insect Challenge",
-    "august_2023_description_insect": "Insects populations are declining around our planet, partly because crops and buildings replace their habitats and are then sprayed with bug-killing pesticides. We need insect pollinators for our crops and wild plants to flourish, and many amphibians, reptiles, birds, and mammals depend on insects for food. Seek out the insects around you and show them some love!",
-    "august_2023_action_insect": "Insects have exoskeletons and can be distinguished from their arthropod relatives by their 6 legs. Where were you able to find insects? Are they at risk from habitat loss or pesticides?",
-    "september_2023_challenge_name_equinox": "Equinox Challenge",
-    "october_2023_challenge_name_migration": "Migration Challenge",
-    "october_2023_description_migration": "Millions of birds migrate from one country to another to escape cold weather and to find food. Keeping track of when wildlife migrates can help us understand how climate change is affecting the natural world. Seek birds visiting your local area and find out where else they spend their time.",
-    "october_2023_action_migration": "Birds need fuel for the long journeys they take to migrate. You can support their food needs by advocating for protected areas and the use of native trees and shrubs in landscaping that provide berries and roosts for visiting birds.",
-    "november_2023_challenge_name_trees": "Trees Challenge",
-    "november_2023_description_trees": "Humans rely on trees and forests for clean air, food, shelter, and wood. They take in carbon from the air and lock it away in their wood or the soil. Spending time among trees makes us feel better in mind and body. We need them now even more than ever, and so do a huge number of other living things. Seek out the trees in your local area and feel the benefits for yourself!",
-    "november_2023_action_trees": "Do you have a favorite kind of tree, or even a favorite individual tree? Read more about it. In what ways do people benefit from it? How do other plants or animals benefit?",
-    "december_2023_challenge_name_ecology": "Ecology Challenge",
-    "december_2023_description_ecology": "Many different kinds of interactions influence ecosystems and their organisms. Ecology is the study of organisms (biotic) and their physical environment (aboitic). Biotic interactions are between living things and aboitic interactions include the non-living factors like temperature, water, light, and soil."
+    "january_2023_challenge_name_habitats": "Desafío de Hábitats",
+    "february_2023_challenge_name_climate_change": "Desafío de Cambio Climático",
+    "february_2023_description_climate_change": "El Cambio Climático no sólo está afectando a los lugares congelados en los polos de nuestro planeta. El aumento de las temperaturas y el cambio de los patrones meteorológicos pueden hacer que las especies salgan de los hábitats que se vuelven inadecuados y se muevan a nuevas zonas. También puede significar que los cambios relacionados con las estaciones (conocidos como “fenología”) como la caída de las hojas y la floración comienzan a producirse en diferentes momentos. Esto puede causar problemas que son dificiles de predecir a otras especies. Busca en tus plantas locales  y mira cómo su ambiente puede estar cambiando.",
+    "february_2023_action_climate_change": "Busca tu planta favorita en el sitio web de iNaturalist y explora la gráfica de “fenología de la Planta” en su página de taxón. Estos gráficos provienen de “anotaciones” para yemas florales, flores o frutos en las observaciones publicadas a iNaturalist. Puedes ayudarlos a añadirlos iniciando sesión en el sitio web de iNaturalist.",
+    "march_2023_challenge_name_lakes_ponds": "Desafío de Lagos y Estanques",
+    "april_2023_challenge_name_nature": "Desafío de la Naturaleza",
+    "april_2023_description_nature": "¡No estamos solos en nuestro planeta! La vida silvestre siempre está a nuestro alrededor si no la vemos. En nuestras casas, jardines, pueblos y ciudades hay mundos ocultos por descubrir. Busque dentro y alrededor de tu casa, y puede sorprenderte cuántos vecinos silvestres encuentras.",
+    "april_2023_action_nature": "Busca plantas, hongos, insectos, aves y otros animales. Atento con las señales de vida más esquiva: excretas (popo), pelo, nidos, huellas, y las telarañas pueden dar pistas de otras criaturas que comparten tu hogar.",
+    "may_2023_challenge_name_protected_areas": "Desafío de Áreas Protegidas",
+    "may_2023_description_protected_areas": "Desde el bosque más profundo hasta el parque más pequeño, compartimos nuestro planeta con una increíble variedad de seres vivos, cada uno adaptado al entorno particular en el que viven. Busca un sitio con naturaleza local y mira cuántos tipos de seres vivos puedes encontrar. ¡A lo largo del camino, aprenderás qué características hacen que estos diferentes grupos de organismos sean diferentes entre sí!",
+    "june_2023_challenge_name_plant_eaters": "Desafío de Comedores de Plantas",
+    "june_2023_action": "¿De qué tipo de plantas se comes? ¿De qué partes de la planta proceden? ¿Qué tipo de animales también les gusta comer esas plantas?",
+    "july_2023_challenge_name_food_web": "Desafío de Cadena Alimenticia",
+    "july_2023_description_plant_eaters": "Todas las especies de una comunidad están conectadas en una cadena alimenticia. Los productores capturan energía del sol, los herbívoros consumen plantas, los carnívoros consumen otros animales y los descomponedores consumen organismos muertos. Busca diferentes niveles en tu red de vida local y aprende cómo cada una permite sobrevivir a otras especies.",
+    "july_2023_action_plant_eaters": "¿Viste herbívoros en acción, como una oruga comiendo una hoja o un ave comiendo una semilla? ¿Viste algún carnívoro en acción, tal vez una araña o una mantis con una presa?",
+    "august_2023_challenge_name_insect": "Desafío de Insectos",
+    "august_2023_description_insect": "Las poblaciones de insectos están disminuyendo alrededor de nuestro planeta, en parte porque los cultivos y los edificios reemplazan sus hábitats y luego son expuestos a plaguicidas que los matan. Necesitamos insectos polinizadores para que nuestros cultivos y plantas silvestres sobrevivan, y muchos anfibios, reptiles, aves y mamíferos dependen de los insectos para alimentarse. ¡Busca los insectos a tu alrededor y muéstrales un poco de amor!",
+    "august_2023_action_insect": "Los insectos tienen exoesqueletos y pueden distinguirse de sus parientes artrópodos por sus 6 patas. ¿Dónde pudiste encontrar insectos?¿Están expuestos a la pérdida de hábitat o plaguicidas?",
+    "september_2023_challenge_name_equinox": "Desafío del Equinoccio",
+    "october_2023_challenge_name_migration": "Desafío de Migración",
+    "october_2023_description_migration": "Millones de aves migran de un país a otro para escapar del clima frío y encontrar alimentos. Mantener un seguimiento de cuándo migran las especies silvestres puede ayudarnos a entender cómo el cambio climático está afectando al mundo natural. Busca pájaros que vistan tu área y averigua dónde más pasan su tiempo.",
+    "october_2023_action_migration": "Las aves necesitan alimento para los largos viajes que emprenden al migrar. Tu puedes apoyar sus necesidades de alimentos abogando por áreas protegidas y el uso de árboles y arbustos nativos que proporcionan alimento y hábitat para las aves que te visitan.",
+    "november_2023_challenge_name_trees": "Desafío de Árboles",
+    "november_2023_description_trees": "Los seres humanos dependen de árboles y bosques para obtener aire limpio, alimentos, abrigo y madera. Los arboles toman carbono del aire y lo encierran en su madera o en el suelo. Pasar el tiempo entre los árboles nos hace sentir mejor en la mente y en el cuerpo. Los necesitamos ahora más que nunca, al igual que un gran número de otros seres vivos. Busca los árboles en su área y siente los beneficios para ti mismo!",
+    "november_2023_action_trees": "¿Tienes un árbol favorito o incluso un árbol individual favorito? Lee más al respecto. ¿De qué manera se beneficia la gente? ¿Cómo se benefician otras plantas o animales?",
+    "december_2023_challenge_name_ecology": "Desafío de la Ecología",
+    "december_2023_description_ecology": "Muchos tipos diferentes de interacciones influyen en los ecosistemas y sus organismos, y la ecología es el estudio de los organismos (bioticos) y su entorno físico (abotico). Las interacciones bióticas son entre los seres vivos y las interacciones abióticas incluyen los factores no vivos como la temperatura, el agua, la luz y el suelo."
   },
   "seek_year_in_review": {
-    "header": "Seek Year in Review",
-    "description": "Thanks for using Seek this year! Check out your personalized Year in Review here:",
-    "button": "View my Seek Review",
-    "in_year_observed": "In {{year}}, you observed",
+    "header": "Resumen Anual de Seek",
+    "description": "¡Gracias por usar Seek este año! Echa un vistazo a tu Resumen Anual personalizado aquí:",
+    "button": "Ver mi Resumen de Seek",
+    "in_year_observed": "En {{year}} observaste",
     "x_new_species": {
-      "one": "{{count}} new species",
-      "two": "{{count}} new species",
-      "few": "{{count}} new species",
-      "many": "{{count}} new species",
-      "other": "{{count}} new species"
+      "one": "{{count}} nueva especie",
+      "two": "{{count}} nuevas especies",
+      "few": "{{count}} nuevas especies",
+      "many": "{{count}} nuevas especies",
+      "other": "{{count}} nuevas especies"
     },
-    "top_species": "Top Species",
-    "observations": "Observations",
-    "observations_by_month": "Observations by Month",
-    "observations_map": "Observations Map",
-    "view_observations_map": "View Observations Map",
+    "top_species": "Especies más observadas",
+    "observations": "Observaciones",
+    "observations_by_month": "Observaciones por mes",
+    "observations_map": "Mapa de observaciones",
+    "view_observations_map": "Ver mapa de observaciones",
     "iNaturalist": "iNaturalist",
     "x_uploaded_observations_text_1": {
-      "one": "You posted {{count}} observation to iNaturalist using Seek in {{year}}.",
-      "two": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
-      "few": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
-      "many": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
-      "other": "You posted {{count}} observations to iNaturalist using Seek in {{year}}."
+      "one": "Has publicado {{count}} observación a iNaturalist usando Seek en {{year}}.",
+      "two": "Has publicado {{count}} observaciones a iNaturalist usando Seek en {{year}}.",
+      "few": "Has publicado {{count}} observaciones a iNaturalist usando Seek en {{year}}.",
+      "many": "Has publicado {{count}} observaciones a iNaturalist usando Seek en {{year}}.",
+      "other": "Has publicado {{count}} observaciones a iNaturalist usando Seek en {{year}}."
     },
-    "uploaded_observations_text_2": "Thank you for contributing to our community!",
-    "observed_in": "{{speciesName}} observed in {{place}}",
-    "observed_on": "{{speciesName}} observed on {{date}}",
-    "challenges": "Challenges",
+    "uploaded_observations_text_2": "¡Gracias por contribuir a nuestra comunidad!",
+    "observed_in": "{{speciesName}} observado en {{place}}",
+    "observed_on": "{{speciesName}} observado el {{date}}",
+    "challenges": "Desafíos",
     "x_challenges_earned_text": {
-      "one": "You earned {{count}} challenge badge in {{year}}.",
-      "two": "You earned {{count}} challenge badges in {{year}}.",
-      "few": "You earned {{count}} challenge badges in {{year}}.",
-      "many": "You earned {{count}} challenge badges in {{year}}.",
-      "other": "You earned {{count}} challenge badges in {{year}}."
+      "one": "Has ganado {{count}} insignia de desafío en {{year}}.",
+      "two": "Has ganado {{count}} insignias de desafío en {{year}}.",
+      "few": "Has ganado {{count}} insignias de desafío en {{year}}.",
+      "many": "Has ganado {{count}} insignias de desafío en {{year}}.",
+      "other": "Has ganado {{count}} insignias de desafío en {{year}}."
     },
-    "thank_you": "Thank you for using Seek! We hope that this reminds you of all the interesting species you met this year.",
-    "consider_donation": "As a small team, we greatly appreciate all your love and enthusiasm for Seek. If you’d like to support us as we grow, please consider donating to iNaturalist:",
-    "donate": "Donate"
+    "thank_you": "¡Gracias por usar Seek! Esperamos que esto te recuerde todas las especies interesantes que conociste este año.",
+    "consider_donation": "Como un equipo pequeño, apreciamos mucho todo su amor y entusiasmo por Seek. Si quieres apoyarnos a medida que crecemos, por favor considera donar a iNaturalist:",
+    "donate": "Donar"
   }
 }
