--- a/translations/es.json
+++ b/translations/es.json
@@ -90,7 +90,9 @@
     "error_no_username": "Falta nombre de usuario / email",
     "error_no_password": "Falta la contraseña",
     "error_internet": "Sin conexión al internet",
-    "error_request_could_not_be_completed": "Tu solicitud no se ha podido completar."
+    "error_request_could_not_be_completed": "Tu solicitud no se ha podido completar.",
+    "error_no_client": "La autenticación del cliente ha fallado debido a cliente desconocido, autenticación de cliente no incluída, o método de autenticación no soportado.",
+    "error_grant_invalid": "The provided authorization grant is invalid, expired, revoked, does not match the redirection URI used in the authorization request, or was issued to another client."
   },
   "inat_signup": {
     "welcome": "¡Bienvenido a Seek!",
