--- a/translations/id.json
+++ b/translations/id.json
@@ -90,7 +90,9 @@
     "error_no_username": "Nama pengguna / email belum dimasukkan",
     "error_no_password": "Kata sandi belum dimasukkan",
     "error_internet": "Tidak ada koneksi internet",
-    "error_request_could_not_be_completed": "Permintaan Anda tidak dapat diselesaikan."
+    "error_request_could_not_be_completed": "Permintaan Anda tidak dapat diselesaikan.",
+    "error_no_client": "Autentikasi klien gagal karena klien tidak diketahui, tidak ada autentikasi klien yang disertakan, atau metode autentikasi tidak didukung.",
+    "error_grant_invalid": "Pemberian otorisasi yang disediakan tidak valid, sudah kedaluwarsa, dicabut, tidak cocok dengan URI pengalihan yang digunakan pada permintaan otorisasi, atau diterbitkan untuk klien lain."
   },
   "inat_signup": {
     "welcome": "Selamat datang di Seek!",
@@ -225,7 +227,7 @@
     "mission_3_may": "Temukan 3 arachnida yang berbeda",
     "mission_4_may": "Temukan 6 tanaman yang berbeda",
     "mission_5_may": "Temukan 3 jamur yang berbeda",
-    "may_description": "From the deepest jungle to the smallest park, we share our planet with an incredible variety of living things, each adapted to the particular environment in which they live. Seek out a local nature hotspot and see how many different types of living thing you can find. Along the way, you’ll learn what characteristics make these different groups of organisms different from each other!",
+    "may_description": "Dari hutan hujan terdalam hingga taman terkecil, kita berbagi planet ini dengan berbagai makhluk hidup yang luar biasa, di mana masing-masing dari mereka telah beradaptasi dengan lingkungan tempat mereka tinggal. Carilah titik panas alam lokalmu dan lihatlah berapa banyak jenis makhluk hidup yang bisa kamu temukan. Di sepanjang perjalanan ini, kamu akan belajar ciri-ciri apa yang membedakan kelompok-kelompok organisme yang satu dengan yang lainnya!",
     "congrats": "Kamu telah menyelesaikan Tantangan Our Planet untuk bulan {{month}}!",
     "thanks": "Terima kasih karena telah berpartisipasi! Kita semua bisa menolong alam. Ikuti perjalanannya di Our Planet Netflix dan pelajari lebih lanjut di ourplanet.com.",
     "no_completed_challenges": "Tantanganmu yang sudah diselesaikan akan muncul di sini.",
@@ -244,8 +246,8 @@
     "how_to": "Selesaikan Tantangan Seek untuk {{month}}!",
     "released": "Tantangan ini akan diluncurkan pada {{date}}.",
     "get_involved": "Ikut terlibat",
-    "action_april": "Check if you live close to a city that's part of the City Nature Challenge, and if so look out for nature recording and identification activities for urban wildlife!",
-    "action_may": "Volunteer your time with local groups that help maintain your local parks.\n\nShare your findings with your family, friends, or school community to open their eyes to the wildlife around them. Organise an event to pick up litter in a local park.",
+    "action_april": "Coba cek apakah Anda tinggal dekat dengan kota yang ikut menjadi bagian dari Tantangan Alam Kota, dan jika iya, cobalah cari rekaman alam dan aktivitas identifikasi untuk satwa urban!",
+    "action_may": "Pakai waktu luang kamu untuk kelompok lokal yang membantu memelihara taman lokalmu.\n\nBagikan temuan-temuanmu dengan keluarga, teman, atau komunitas sekolah untuk membuka mata mereka kepada satwa-satwa di sekitar mereka. Selenggarakan sebuah acara untuk memungut sampah-sampah di sebuah taman lokal.",
     "action_june": "Use the resources on ourplanet.com to start a local biodiversity action project in your area to give your local wildlife a helping hand.",
     "action_november_2019": "Collect seeds from local native trees, germinate them in pots and then plant the young trees.\n\nTell friends or family members about all the things trees do for us.",
     "action_august": "Plant wildflowers to provide food for pollinators.\n\nMake a ‘bug hotel’ to provide homes for insects in your garden or schoolground by bundling short lengths of pipe together and stuffing each with small twigs and pieces of broken tile.",
