--- a/translations/sr.json
+++ b/translations/sr.json
@@ -12,7 +12,7 @@
     "choose_location_on_map": "CHOOSE LOCATION ON MAP"
   },
   "get_started": {
-    "header": "Get started",
+    "header": "Почните",
     "tip_1": "Take photos with Seek’s Camera to identify living things all around you.",
     "tip_2": "Learn about the species that have been observed around you with Species Nearby.",
     "tip_3": "Earn badges and raise your level by identifying different types of species and participating in challenges."
@@ -90,7 +90,9 @@
     "error_no_username": "Missing username / email",
     "error_no_password": "Missing password",
     "error_internet": "No internet connection",
-    "error_request_could_not_be_completed": "Your request could not be completed."
+    "error_request_could_not_be_completed": "Your request could not be completed.",
+    "error_no_client": "Client authentication failed due to unknown client, no client authentication included, or unsupported authentication method.",
+    "error_grant_invalid": "The provided authorization grant is invalid, expired, revoked, does not match the redirection URI used in the authorization request, or was issued to another client."
   },
   "inat_signup": {
     "welcome": "Welcome to Seek!",
