--- a/translations/fi.json
+++ b/translations/fi.json
@@ -91,8 +91,8 @@
     "error_no_password": "Puuttuva salasana",
     "error_internet": "Ei verkkoyhteyttä",
     "error_request_could_not_be_completed": "Pyyntöäsi ei voitu suorittaa.",
-    "error_no_client": "Client authentication failed due to unknown client, no client authentication included, or unsupported authentication method.",
-    "error_grant_invalid": "The provided authorization grant is invalid, expired, revoked, does not match the redirection URI used in the authorization request, or was issued to another client."
+    "error_no_client": "Asiakkaan todennus epäonnistui tuntemattoman asiakkaan vuoksi, asiakkaan todennus puuttuu tai todennusmenetelmää ei tueta.",
+    "error_grant_invalid": "Annettu valtuutus on virheellinen, vanhentunut, peruutettu, ei vastaa valtuutuspyynnössä käytettyä uudelleenohjaus-URI:tä tai se on myönnetty toiselle asiakkaalle."
   },
   "inat_signup": {
     "welcome": "Tervetuloa Seekiin!",
@@ -570,7 +570,7 @@
     "joint_initiative": "iNaturalist on Kalifornian tiedeakatemian ja National Geographic Societyn yhteishanke.",
     "original": "Seek on alun perin luotu HHMI Tangled Bank Studios -tuella ja sitä on paranneltu Netflixin Our Planet -sarjan ja WWF:n tuella.",
     "designed_by": "INaturalist-tiimin suunnittelema ja kehittämä:",
-    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Johannes Klein, ja Yaron Budowski. Erityiset kiitokset Visipedian Grant Van Hornille avusta konenäköteknologian kanssa ja iNaturalist-yhteisölle.",
+    "inat_team_credits_2": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Yaron Budowski, Johannes Klein, and Angie Ta. Special thanks to Grant Van Horn from Visipedia for help with the computer vision technology, and the iNaturalist community.",
     "version": "Versio",
     "help": "Jos tarvitset apua Seekin kanssa, lähetä sähköpostia osoitteeseen help+seek@inaturalist.org.",
     "translators": "Olemme kiitollisia crowdin.com-yhteisön tarjoamasta käännösavusta, erityisesti: Abdelghani Hourani, Carnifex, cgalindo, Daniele Seglie, Eduardo Martínez, Édson Souza Jr. Galder Gonzalez Larrañaga, Gideon Wentink, Johan Liljeblad, katunchik, Kevin Matthew, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, Nicolae Liviu, Nuwan Wijayaweera, saariko, Sakatur, Sebastian Jasiński, TheKakarinka, Wouter Koch ja Yulia Lygina.",
