--- a/translations/kn.json
+++ b/translations/kn.json
@@ -134,8 +134,7 @@
     "learn_more_about_data_transfer": "Some data privacy laws, like the European Union's General Data Protection Regulation (GDPR), require explicit consent to transfer personal information from their jurisdictions to other jurisdictions where the legal protection of this information is not considered adequate. As of 2020, the European Union no longer considers the United States to be a jurisdiction that provides adequate legal protection of personal information, specifically because of the possibility of the US government surveilling data entering the US. It is possible other jurisdictions may have the same opinion.",
     "learn_more_about_data_transfer_2": "Using iNaturalist requires the storage of personal information like your email address, all iNaturalist data is stored in the United States, and we cannot be sure what legal jurisdiction you are in when you are using iNaturalist, so in order to comply with privacy laws like the GDPR, you must acknowledge that you understand and accept this risk and consent to transferring your personal information to iNaturalist's servers in the US.",
     "learn_more_about_data_transfer_3": "To learn more about what information we collect and how we use it, please see our <privacy>{{privacy}}</privacy> and <terms>{{terms}}</terms>.",
-    "learn_more_about_data_transfer_4": "There is no way to have an iNaturalist account without storing personal information, so the only way to revoke this consent is to delete your account.",
-    "login_error_auth_grant_invalid": "The provided authorization grant is invalid, expired, revoked, does not match the redirection URI used in the authorization request, or was issued to another client."
+    "learn_more_about_data_transfer_4": "There is no way to have an iNaturalist account without storing personal information, so the only way to revoke this consent is to delete your account."
   },
   "inat_login": {
     "log_in_with_inat": "iNaturalist ಖಾತೆಯೊಂದಿಗೆ ಲಾಗಿನ್ ಆಗಿ",
@@ -571,7 +570,7 @@
     "joint_initiative": "iNaturalist ಕ್ಯಾಲಿಫೋರ್ನಿಯಾ ಅಕಾಡೆಮಿ ಆಫ್ ಸೈನ್ಸಸ್ ಮತ್ತು ನ್ಯಾಷನಲ್ ಜಿಯೋಗ್ರಾಫಿಕ್ ಸೊಸೈಟಿಯ ಜಂಟಿ ಪ್ರಯತ್ನ.",
     "original": "Seek was originally created with support from HHMI Tangled Bank Studios and enhanced with support from Our Planet on Netflix and WWF.",
     "designed_by": "iNaturalist ತಂಡದಿಂದ ವಿನ್ಯಾಸ ಹಾಗು ಅಭಿವೃದ್ಧಿಪಡಿಸಲಾಗಿದೆ:",
-    "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Johannes Klein, ಮತ್ತು Yaron Budowski. ಕಂಪ್ಯೂಟರ್ ವಿಷನ್ ತಂತ್ರಜ್ಞಾನದಲ್ಲಿ ನೆರವು ನೀಡಿದ ವಿಸಿಪೇಡಿಯಾದ Grant Van Horn ಮತ್ತು iNaturalist ಸಮುದಾಯಕ್ಕೆ ವಿಶೇಷ ಧನ್ಯವಾದಗಳು.",
+    "inat_team_credits_2": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Yaron Budowski, Johannes Klein, and Angie Ta. Special thanks to Grant Van Horn from Visipedia for help with the computer vision technology, and the iNaturalist community.",
     "version": "ಆವೃತ್ತಿ",
     "help": "Seek ಜೊತೆಗಿನ ಸಹಾಯಕ್ಕಾಗಿ, ದಯವಿಟ್ಟು help+seek@inaturalist.org ಗೆ ಮಿಂಚೆ ಕಳುಹಿಸಿ.",
     "translators": "ಅನುವಾದ ಕಾರ್ಯದಲ್ಲಿ ನೆರವು ನೀಡಿದ crowdin.com ಸಮುದಾಯಕ್ಕೆ ನಾವು ಚಿರಋಣಿಗಳಾಗಿರುತ್ತೇವೆ, ವಿಶೇಷವಾಗಿ : Abdelghani Hourani, Carnifex, cgalindo, Daniele Seglie, Eduardo Martínez, Édson Souza Jr., Galder Gonzalez Larrañaga, Gideon Wentink, Johan Liljeblad, katunchik, Kevin Matthew, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, Nicolae Liviu, Nuwan Wijayaweera, saariko, Sakatur, Sebastian Jasiński, TheKakarinka, Wouter Koch, ಮತ್ತು Yulia Lygina ಅವರುಗಳಿಗೆ.",
