New Crowdin updates (#554)
* New translations en.json (Hungarian)

* New translations en.json (Chinese Traditional)

* New translations full_description.txt (Spanish, Mexico)

* New translations en.json (Chinese Traditional)

* New translations en.json (Kannada)

--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -4,7 +4,7 @@
     "internet_error": "我們必須使用網路來顯示你附近的物種。請點按以重試。",
     "no_location": "沒有位置資訊",
     "no_gps": "未找到 GPS 訊號。請仔細檢查您是否開啟了 GPS",
-    "no_species": "似乎尚未在附近觀察到大量物种！請嘗試變更您所在位置或擴大物種篩選範圍。",
+    "no_species": "似乎尚未在附近觀察到大量物種！請嘗試變更您所在位置或擴大物種篩選範圍。",
     "input_location_above_map": "找不到位置資訊；在上面輸入位置名稱，以載入地圖並尋找附近的物種",
     "error_alert_location_services": "請在您裝置的設定中開啟定位功能才能繼續",
     "species_nearby_requires_location": "附近的物種需要您的位置資訊。請在設定中開啟定位功能",
@@ -944,8 +944,8 @@
     "june_2023_challenge_name_plant_eaters": "植食者挑戰",
     "june_2023_action": "您會吃什麼樣的植物？它們來自植物的哪些部分？有哪些動物也喜歡吃這些植物？",
     "july_2023_challenge_name_food_web": "食物網挑戰",
-    "july_2023_description_plant_eaters": "Every species in a community is connected in a food web. Producers capture energy from the sun, herbivores eat plants, carnivores eat other animals, and decomposers consume dead organisms. Seek out different levels in your local web of life, and learn how each one enables other species to survive.",
-    "july_2023_action_plant_eaters": "Did you see any herbivores in action, such as a caterpillar eating a leaf or a bird eating seeds? Did you see any carnivores in action, perhaps a spider or a mantis with prey?",
+    "july_2023_description_plant_eaters": "社區裡的每一種物種都在食物網中相互聯繫著。生產者透過太陽取得能量，植食者吃掉植物，肉食者吃掉其他動物，而分解者則會吃光死去的生物。到附近去探索生命網中不同的層次，並了解每一層是怎麼讓其他物種生存下去的。",
+    "july_2023_action_plant_eaters": "您有沒有看到任何的植食者在活動，比如吃樹葉的毛毛蟲或吃種子的鳥兒？您有沒有看到任何的肉食者在活動，像是蜘蛛或螳螂與牠們的獵物？",
     "august_2023_challenge_name_insect": "昆蟲挑戰",
     "august_2023_description_insect": "Insects populations are declining around our planet, partly because crops and buildings replace their habitats and are then sprayed with bug-killing pesticides. We need insect pollinators for our crops and wild plants to flourish, and many amphibians, reptiles, birds, and mammals depend on insects for food. Seek out the insects around you and show them some love!",
     "august_2023_action_insect": "Insects have exoskeletons and can be distinguished from their arthropod relatives by their 6 legs. Where were you able to find insects? Are they at risk from habitat loss or pesticides?",
