--- a/translations/bg.json
+++ b/translations/bg.json
@@ -91,8 +91,8 @@
     "error_no_password": "Липсваща парола.",
     "error_internet": "Няма интернет връзка",
     "error_request_could_not_be_completed": "Вашата заявка не можа да бъде изпълнена.",
-    "error_no_client": "Client authentication failed due to unknown client, no client authentication included, or unsupported authentication method.",
-    "error_grant_invalid": "The provided authorization grant is invalid, expired, revoked, does not match the redirection URI used in the authorization request, or was issued to another client."
+    "error_no_client": "Автентикацията на клиента се провали заради непознат клиент, липса на клиентска автентикация или неподдържан метод за автентикация.",
+    "error_grant_invalid": "Предоставената автентикация е невалидна, изтекла, несъвпадаща с пренасочващия URI използван в заявката за автентикация или е издадена на друг клиент."
   },
   "inat_signup": {
     "welcome": "Добре дошли в Seek!",
@@ -161,7 +161,6 @@
     "achievements": "Постижения",
     "challenges": "Предизвикателства",
     "observations": "Мойте наблюдения",
-    "inat": "iNaturalist",
     "about": "Относно",
     "settings": "Настройки"
   },
@@ -570,7 +569,7 @@
     "joint_initiative": "iNaturalist is a joint initiative of the California Academy of Sciences and the National Geographic Society.",
     "original": "Seek was originally created with support from HHMI Tangled Bank Studios and enhanced with support from Our Planet on Netflix and WWF.",
     "designed_by": "Designed & developed by the iNaturalist team:",
-    "inat_team_credits_2": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Yaron Budowski, Johannes Klein, and Angie Ta. Special thanks to Grant Van Horn from Visipedia for help with the computer vision technology, and the iNaturalist community.",
+    "inat_team_credits_2": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Yaron Budowski, Johannes Klein, and Angie Ta. Специални благодарности на  Grant Van Horn от Visipedia за помощта с компютърното зрение и на общността на iNaturalist.",
     "version": "Версия",
     "help": "For help with Seek, please email help+seek@inaturalist.org.",
     "translators": "We are grateful for the translation assistance provided by the crowdin.com community, especially: Abdelghani Hourani, Carnifex, cgalindo, Daniele Seglie, Eduardo Martínez, Édson Souza Jr., Galder Gonzalez Larrañaga, Gideon Wentink, Johan Liljeblad, katunchik, Kevin Matthew, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, Nicolae Liviu, Nuwan Wijayaweera, saariko, Sakatur, Sebastian Jasiński, TheKakarinka, Wouter Koch, and Yulia Lygina.",
@@ -976,7 +975,6 @@
     "observations_by_month": "Наблюдения по месец",
     "observations_map": "Карта на наблюдения",
     "view_observations_map": "Виж карта на наблюдения",
-    "iNaturalist": "iNaturalist",
     "x_uploaded_observations_text_1": {
       "one": "You posted {{count}} observation to iNaturalist using Seek in {{year}}.",
       "two": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
