--- a/translations/en.json
+++ b/translations/en.json
@@ -668,7 +668,7 @@
   },
   "debug": {
     "logs": "Send debug logs by email",
-    "copy_logs": "Copy debug logs into clipboard"
+    "copy_logs": "Tap here to copy the content of debug logs into clipboard. Then paste it into an email and send to help+seek@inaturalist.org"
   },
   "shortcut": {
     "seek_camera": "Seek Camera",
