New Crowdin updates (#560)
* New translations en.json (Chinese Traditional)

* New translations full_description.txt (Ukrainian)

* New translations description.txt (Ukrainian)

* New translations en.json (Chinese Traditional)

* New translations en.json (Chinese Traditional)

* New translations en.json (Romanian)

* New translations InfoPlist.strings (Romanian)

* New translations full_description.txt (Romanian)

* New translations description.txt (Romanian)

* New translations en.json (Chinese Traditional)

* New translations en.json (Chinese Traditional)

* New translations en.json (Croatian)

* New translations en.json (Chinese Traditional)

* New translations en.json (Chinese Traditional)

* New translations en.json (Hebrew)

* New translations en.json (Hebrew)

* New translations en.json (Catalan)

* New translations en.json (Spanish)

* New translations en.json (Catalan)

* New translations InfoPlist.strings (Spanish)

* New translations en.json (Spanish)

* New translations en.json (Catalan)

* New translations en.json (Chinese Traditional)

* New translations en.json (Romanian)

* New translations en.json (French)

* New translations en.json (Afrikaans)

* New translations en.json (Arabic)

* New translations en.json (Bulgarian)

* New translations en.json (Czech)

* New translations en.json (Danish)

* New translations en.json (German)

* New translations en.json (Greek)

* New translations en.json (Basque)

* New translations en.json (Finnish)

* New translations en.json (Hebrew)

* New translations en.json (Hungarian)

* New translations en.json (Italian)

* New translations en.json (Japanese)

* New translations en.json (Dutch)

* New translations en.json (Norwegian)

* New translations en.json (Polish)

* New translations en.json (Portuguese)

* New translations en.json (Russian)

* New translations en.json (Swedish)

* New translations en.json (Turkish)

* New tr

--- a/translations/de.json
+++ b/translations/de.json
@@ -569,7 +569,7 @@
     "joint_initiative": "iNaturalist ist eine gemeinsame Initiative der California Academy of Sciences und der National Geographic Society.",
     "original": "Seek wurde ursprünglich mit Unterstützung von OurPlanet auf Netflix und HHMI Tangled Bank Studios entwickelt.",
     "designed_by": "Entworfen und entwickelt vom iNaturalist Team:",
-    "inat_team_credits_2": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Yaron Budowski, Johannes Klein und Angie Ta. Besonderen Dank an Grant Van Horn von Visipedia für die Unterstützung mit der Computer Vision-Technologie, sowie die gesamte iNaturalist-Community.",
+    "inat_team_credits_3": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Yaron Budowski, Johannes Klein, Angie Ta und Sylvain Morin. Besonderen Dank an Grant Van Horn von Visipedia für die Unterstützung mit der Computer Vision-Technologie, sowie die gesamte iNaturalist-Community.",
     "version": "Version",
     "help": "Für Hilfe zu Seek sende eine E-Mail an help+seek@inaturalist.org.",
     "translators": "Wir sind dankbar für die Hilfe bei der Übersetzung durch die crowdin.com-Community, insbesondere: Abdelghani Hourani, Carnifex, cgalindo, Daniele Seglie, Eduardo Martínez, Édson Souza Jr., Galder Gonzalez Larrañaga, Gideon Wentink, Johan Liljeblad, katunchik, Kevin Matthew, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, Nicolae Liviu, Nuwan Wijayaweera, saariko, Sakatur, Sebastian Jasiński, TheKakarinka, Wouter Koch und Yulia Lygina.",
