--- a/translations/he.json
+++ b/translations/he.json
@@ -91,8 +91,8 @@
     "error_no_password": "חסרה סיסמה",
     "error_internet": "אין חיבור אינטרנט",
     "error_request_could_not_be_completed": "לא היה ניתן לבצע את בקשתך.",
-    "error_no_client": "Client authentication failed due to unknown client, no client authentication included, or unsupported authentication method.",
-    "error_grant_invalid": "The provided authorization grant is invalid, expired, revoked, does not match the redirection URI used in the authorization request, or was issued to another client."
+    "error_no_client": "אימות הלקוח נכשל עקב כשל בזיהוי הלקוח, העדר דרישת זיהוי לקוח או שיטת אימות בלתי נתמכת.",
+    "error_grant_invalid": "ההרשאה שניתנה אינה תקינה, פג תוקפה, נשללה, אינה תואמת את מפתח ההפניה (URI) המשמש בבקשת האימות, או שהונפקה עבור לקוח אחר"
   },
   "inat_signup": {
     "welcome": "ברוכות.ים הבאות.ים ל-Seek!",
@@ -569,7 +569,7 @@
     "joint_initiative": "iNaturalist הוא מיזם שיתופי של האקדמיה למדעים של קליפורניה ונשיונל ג'יאוגרפיק",
     "original": "Seek פותחה במקור בתמיכת אולפני HHMI Tangled Bank ושופרה בתמיכת הסדרה 'כוכב הלכת המופלא' בהפקת נטפליקס וארגון WWF.",
     "designed_by": "עוצב ופותח על ידי צוות iNaturalist:",
-    "inat_team_credits_2": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Yaron Budowski, Johannes Klein, and Angie Ta. Special thanks to Grant Van Horn from Visipedia for help with the computer vision technology, and the iNaturalist community.",
+    "inat_team_credits_3": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, Yaron Budowski, Johannes Klein, Angie Ta, and Sylvain Morin. Special thanks to Grant Van Horn from Visipedia for help with the computer vision technology, and the iNaturalist community.",
     "version": "גרסה",
     "help": "לעזרה עם אפליקציית Seek, נא לשלוח דוא\"ל לכתובת help+seek@inaturalist.org.",
     "translators": "אנו אסירי תודה על עזרה בתרגום שניתן על ידי קהילת crowdin.com, ובייחוד: Abdelghani Hourani, Carnifex, Daniele Seglie, Eduardo Martínez, Gideon Wentink, Johan Liljeblad, katunchik, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, saariko, Sakatur, TheKakarinka, Wouter Koch, ו-Yulia Lygina.",
@@ -687,8 +687,8 @@
     "seasonality_option_1": "הצגת עונתיות על בסיס תצפיות עולמיות של iNaturalist",
     "seasonality_option_2": "הצגת עונתיות על בסיס תצפיות iNaturalist בקרבת המיקום הנוכחי שלי (מינים שלא נמצאים באיזור שלי יהיו ללא פירוט עונתיות)",
     "donate_ios": "נא ללחוץ על הקישור הבא כדי לתרום ל-Seek:",
-    "change_language": "Switch the in-app language to {{language}}?",
-    "confirm": "Confirm"
+    "change_language": "להחליף את שפת האפליקציה ל{{language}}?",
+    "confirm": "אישור"
   },
   "seek_challenges": {
     "badge": "תג של Seek",
@@ -856,7 +856,7 @@
     "logged_in_bullet_3": "תצפיות ה-Seek שלך אינן מגובות באתר iNaturalist. מחיקת אפליקציית Seek תמחק את כל התצפיות שבמכשירך.",
     "upload_and_track_obs_using_inat": "אפשר להעלות את התצפיות שלך ולעקוב אחריהן באמצעות אפליקציית iNaturalist או באתר inaturalist.org.\n\nתודה על השתתפותך בקהילה!",
     "x_seen_by_user": "{{speciesName}} נצפה על ידי {{user}}",
-    "about_inat_internet_error": "You are logged in to iNaturalist, but we need the internet to show details. Tap to try again."
+    "about_inat_internet_error": "הנך מחובר.ת ל-iNaturalist אך דרוש חיבור לאינטרנט כדי להציג פרטים. יש ללחוץ לנסות שנית."
   },
   "seek_2021_challenges": {
     "august_2021_challenge_name": "אתגר פרוקי-רגליים טורפים",
@@ -927,74 +927,74 @@
     "november_2022_mission_1": "עליך למצוא 4 מינים מתוך:\n\nמשפחת המצליבים (חרדלים);\nמשפחת השפתניים (נענע);\nמשפחת הדגניים (עשבים);\nסדרת התיקנאים (תיקנים וטרמיטים);\nסדרת המכרסמים;\nסדרת היוניאם (יונים ותורים);\nסדרת העורביים (עורבים, עורבנים ועקעקים);\nסוג דרור;\nסוג מיינה;\nאינפרא-סדרת השממיות",
     "november_2022_description_some_species_well_adapted": "ישנם מינים שמותאמים היטב לאזורים מיושבים. אפילו בתוך ערים, ניתן למצוא מגוון ביולוגי בסדקים במדרכה, במגרשים ריקים, בגנים ציבוריים, ואפילו בבתים שלנו (אולי בתור מבקרים בלתי-רצויים).",
     "november_2022_action_change_location": "יש לשנות את המיקום עבור \"מינים שנצפו בסביבה\" כדי לחפש בעיר רחוקה ממך. אילו מינים נצפים שם? האם חלקם זהים או דומים למינים שנצפו בסביבתך?",
-    "december_2022_challenge_name_decomposers": "Decomposers Challenge"
+    "december_2022_challenge_name_decomposers": "אתגר המפרקים"
   },
   "seek_2023_challenges": {
-    "january_2023_challenge_name_habitats": "Habitats Challenge",
-    "february_2023_challenge_name_climate_change": "Climate Change Challenge",
-    "february_2023_description_climate_change": "Climate change is not just affecting the frozen worlds at our planet’s poles. Rising temperatures and changing weather patterns can cause species to move out of habitats that become uncomfortable and into new areas. It can also mean that changes linked to seasons (known as “phenology”) such as leaf fall and flowering start to take place at different times. This may cause problems for other species that are hard to predict. Seek out your local plant life and see how your local environment may be changing.",
-    "february_2023_action_climate_change": "Look up your favorite plant on the iNaturalist website and explore the “plant phenology” graph on its taxon page. These charts come from “annotations” for flower buds, flowers, or fruits on the observations posted to iNaturalist. You can help add them by logging in on the iNaturalist website.",
-    "march_2023_challenge_name_lakes_ponds": "Lakes and Ponds Challenge",
-    "april_2023_challenge_name_nature": "Nature Challenge",
-    "april_2023_description_nature": "We are not alone on our planet! Wildlife is always around us whether we notice it or not. In our homes, gardens, towns, and cities there are hidden worlds to be discovered. Seek in and around your home, and you may be surprised by how many wild neighbours you find.",
-    "april_2023_action_nature": "Seek out plants, fungi, bugs, birds, and animals. Watch out for signs of more elusive life – scat (poo), fur, nests, tracks, and webs can all give clues to other creatures that share your home.",
-    "may_2023_challenge_name_protected_areas": "Protected Areas Challenge",
-    "may_2023_description_protected_areas": "From the deepest forest to the smallest park, we share our planet with an incredible variety of living things, each adapted to the particular environment in which they live. Seek out a local nature hotspot and see how many different types of living thing you can find. Along the way, you’ll learn what characteristics make these different groups of organisms different from each other!",
-    "june_2023_challenge_name_plant_eaters": "Plant Eaters Challenge",
-    "june_2023_action": "What kinds of plants do you eat? What parts of the plant do they come from? What kinds of animals also like to eat those plants?",
-    "july_2023_challenge_name_food_web": "Food Web Challenge",
-    "july_2023_description_plant_eaters": "Every species in a community is connected in a food web. Producers capture energy from the sun, herbivores eat plants, carnivores eat other animals, and decomposers consume dead organisms. Seek out different levels in your local web of life, and learn how each one enables other species to survive.",
-    "july_2023_action_plant_eaters": "Did you see any herbivores in action, such as a caterpillar eating a leaf or a bird eating seeds? Did you see any carnivores in action, perhaps a spider or a mantis with prey?",
-    "august_2023_challenge_name_insect": "Insect Challenge",
-    "august_2023_description_insect": "Insects populations are declining around our planet, partly because crops and buildings replace their habitats and are then sprayed with bug-killing pesticides. We need insect pollinators for our crops and wild plants to flourish, and many amphibians, reptiles, birds, and mammals depend on insects for food. Seek out the insects around you and show them some love!",
-    "august_2023_action_insect": "Insects have exoskeletons and can be distinguished from their arthropod relatives by their 6 legs. Where were you able to find insects? Are they at risk from habitat loss or pesticides?",
-    "september_2023_challenge_name_equinox": "Equinox Challenge",
-    "october_2023_challenge_name_migration": "Migration Challenge",
-    "october_2023_description_migration": "Millions of birds migrate from one country to another to escape cold weather and to find food. Keeping track of when wildlife migrates can help us understand how climate change is affecting the natural world. Seek birds visiting your local area and find out where else they spend their time.",
-    "october_2023_action_migration": "Birds need fuel for the long journeys they take to migrate. You can support their food needs by advocating for protected areas and the use of native trees and shrubs in landscaping that provide berries and roosts for visiting birds.",
-    "november_2023_challenge_name_trees": "Trees Challenge",
-    "november_2023_description_trees": "Humans rely on trees and forests for clean air, food, shelter, and wood. They take in carbon from the air and lock it away in their wood or the soil. Spending time among trees makes us feel better in mind and body. We need them now even more than ever, and so do a huge number of other living things. Seek out the trees in your local area and feel the benefits for yourself!",
-    "november_2023_action_trees": "Do you have a favorite kind of tree, or even a favorite individual tree? Read more about it. In what ways do people benefit from it? How do other plants or animals benefit?",
-    "december_2023_challenge_name_ecology": "Ecology Challenge",
-    "december_2023_description_ecology": "Many different kinds of interactions influence ecosystems and their organisms. Ecology is the study of organisms (biotic) and their physical environment (aboitic). Biotic interactions are between living things and aboitic interactions include the non-living factors like temperature, water, light, and soil."
+    "january_2023_challenge_name_habitats": "אתגר בתי גידול",
+    "february_2023_challenge_name_climate_change": "אתגר שינוי אקלים",
+    "february_2023_description_climate_change": "שינוי אקלים משפיע לא רק על העולמות הקפואים בקוטבי כדור הארץ שלנו. עלייה בטמפרטורות ושינויים בדפוסי מזג אוויר עלולים לגרום למינים לצאת מבתי גידול שהופכים להיות לא נוחים אל אזורים חדשים. משמעות נוספת היא ששינויים הקשורים לעונה (הנקראים \"פנולוגיה\") כגון נשירת עלים ופריחה מתחילים להתרחש בזמנים שונים. דבר זה עלול ליצור בעיות עבור מינים אחרים אשר קשות לחיזוי. חפש.י את הצמחייה המקומית שלך כדי לראות כיצד הסביבה שלך יכולה להיות בשינוי.",
+    "february_2023_action_climate_change": "חפשו את הצמח האהוב עליכן.ם באתר iNaturalist וגלו את גרף \"פנולוגיית הצמח\" בעמוד הטקסון שלו. טבלאות אלו באות מ\"תוויות\" ניצנים, פרחים, או פירות על התצפיות שהועלו ל-iNaturalist. באפשרותך לעזור להוסיף אותן באמצעות התחברות לאתר iNaturalist.",
+    "march_2023_challenge_name_lakes_ponds": "אתגר אגמים ובריכות",
+    "april_2023_challenge_name_nature": "אתגר הטבע",
+    "april_2023_description_nature": "אנחנו לא לבד על הכוכב שלנו! הטבע תמיד סובב אותנו בין אם אנחנו שמים ושמות לב אליו ובין אם לא. בבתים, בגינות, בישובים ובערים שלנו ישנם עולמות נסתרים המחכים להתגלות. חפש.י בתוך ובסביבת הבית שלך, ויתכן ותופתע.י לגלות כמה שכני בר תמצא.י.",
+    "april_2023_action_nature": "חפשו צמחים, פטריות, חרקים, ציפורים ויונקים. הבחינו בסימני חיים יותר חמקמקים - גללים (קקי), פרווה, קנים, עקבות וקורים יכולים כולם לתת לך רמזים אודות יצורים אחרים שחולקים את ביתך.",
+    "may_2023_challenge_name_protected_areas": "אתגר שטחים מוגנים",
+    "may_2023_description_protected_areas": "מהיערות הכי עמוקים ועד לגינה הכי קטנה, אנו חולקות וחולקים את כדור הארץ עם מגוון אדיר של יצורים חיים, כאשר כל אחד מהם מותאם לסביבה הספציפית בו הוא חי. חפשו נקודה חמה של טבע מקומי וראו כמה סוגים שונים של יצורים חיים אפשר למצוא. לאורך הדרך, תלמדו אילו תכונות מבדילות את קבוצות היצורים הללו זו מזו!",
+    "june_2023_challenge_name_plant_eaters": "אתגר אוכלי צמחים",
+    "june_2023_action": "אילו סוגי צמחים את.ה אוכל.ת? מאילו חלקים בצמח הם באים? אילו סוגי בעלי חיים גם אוהבים לאכול את אותם הצמחים?",
+    "july_2023_challenge_name_food_web": "אתגר מארג המזון",
+    "july_2023_description_plant_eaters": "כל מין בתוך חברה מחובר דרך מארג מזון. יצרנים לוכדים אנרגיה מהשמש, צמחונים אוכלים צמחים, טורפים אוכלים בעלי חיים אחרים, ומפרקים אוכלים יצורים מתים. חפשו רמות שונות במארג המזון המקומי שלכן.ם ולמדו כיצד כל יצור מאפשר למינים אחרים לחיות.",
+    "july_2023_action_plant_eaters": "האם ראית צמחונים בפעולה, למשל זחל אוכל עלה או ציפור אוכלת זרעים? ראית טורפים בפעולה, אולי עכביש או גמל שלמה עם טרף?",
+    "august_2023_challenge_name_insect": "אתגר חרקים",
+    "august_2023_description_insect": "אוכלוסיות חרקים נמצאות במגמת ירידה מסביב לעולם, בין היתר מכיוון שגידולים חקלאיים ומבנים מחליפים את בתי הגידול שלהם ואז מרוססים באמצעות קוטלי חרקים. אנחנו צריכות וצריכים חרקים מאביקים בשביל שהגידולים שלנו וצמחי בר ישגשגו, והרבה דו-חיים, זוחלים, ציפורים ויונקים תלויים בחרקים בשביל מזונם. חפשו את החקרים מסביב והראו להם קצת אהבה!",
+    "august_2023_action_insect": "לחרקים יש שלדים חיצוניים וניתן להבדיל ביניהם לבין קרוביהם פרוקי הרגליים באמצעות 6 רגליהם. הצלחת למצוא חרקים? האם הם בסיכון מאובדן בתי גידול או ריסוס?",
+    "september_2023_challenge_name_equinox": "אתגר נקודת השוויון",
+    "october_2023_challenge_name_migration": "אתגר נדידה",
+    "october_2023_description_migration": "מילוני ציפורים נודדות מארץ אחת לארץ אחרת כדי להתחמק ממזג אוויר קר ולמצוא מזון. מעקב אחר נדידות של חיות בר יכול לעזור לנו להבין כיצד שינוי האקלים משפיע על עולם הטבע. חפשו ציפורים המבקרות באזור שלכם.ן וגלו איפה עוד הן מבלות.",
+    "october_2023_action_migration": "ציפורים צריכות דלק למסעות הארוכים שלהן בנדידה. ביכולתך לסייע בצורכי המזון שלהן באמצעות תמיכה בשטחים מוגנים ושימוש בעצים ושיחים מקומיים באדריכלות נוף המספקים פירות ומקומות לינה עבור הציפורים המבקרות.",
+    "november_2023_challenge_name_trees": "אתגר העצים",
+    "november_2023_description_trees": "בני אדם סומכים על עצים בשביל אוויר נקי, מזון, מחסה ועץ. הם סופגים פחמן מהאוויר ואוגרים אותו בעץ שלהם או באדמה. בילוי בקרב עצים גורם לנו להרגיש טוב יותר בגוף ובנפש. אנחנו ועוד כמות עצומה של יצורים חיים צריכים אותם עכשיו יותר מאי פעם. חפש.י את העצים באזור שלך ותרגיש.י את היתרונות בעצמך!",
+    "november_2023_action_trees": "האם יש סוג עצים או אפילו עץ בודד שאהוב עליך במיוחד? קרא.י עוד עליו. באילו דרכים בני אדם נהנים ממנו? כיצד צמחים או בעלי חיים אחרים נהנים?",
+    "december_2023_challenge_name_ecology": "אתגר אקולוגיה",
+    "december_2023_description_ecology": "אינטראקציות מסוגים רבים משפיעות על מערכות אקולוגיות ועל היצורים שבהן. אקולוגיה היא החקר של יצורים (ביוטיים) וסביבתם הפיזית (אביוטית). אינטראקציות ביוטיות הן בין יצורים חיים ואינטראקציות אביוטיות כוללות גורמים שאינם חיים כגון טמפרטורה, אור, מים ואדמה."
   },
   "seek_year_in_review": {
-    "header": "Seek Year in Review",
-    "description": "Thanks for using Seek this year! Check out your personalized Year in Review here:",
-    "button": "View my Seek Review",
-    "in_year_observed": "In {{year}}, you observed",
+    "header": "סיכום שנת Seek",
+    "description": "תודה שהשתמשת ב-Seek השנה! ניתן לראות את סיכום השנה האישי שלך כאן:",
+    "button": "צפייה בסיכום Seek שלי",
+    "in_year_observed": "בשנת {{year}}, צפית ב",
     "x_new_species": {
-      "one": "{{count}} new species",
-      "two": "{{count}} new species",
-      "few": "{{count}} new species",
-      "many": "{{count}} new species",
-      "other": "{{count}} new species"
+      "one": "{{count}} מינים חדשים",
+      "two": "{{count}} מינים חדשים",
+      "few": "{{count}} מינים חדשים",
+      "many": "{{count}} מינים חדשים",
+      "other": "{{count}} מינים חדשים"
     },
-    "top_species": "Top Species",
-    "observations": "Observations",
-    "observations_by_month": "Observations by Month",
-    "observations_map": "Observations Map",
-    "view_observations_map": "View Observations Map",
+    "top_species": "המין המוביל",
+    "observations": "תצפיות",
+    "observations_by_month": "תצפיות לפי חודש",
+    "observations_map": "מפת תצפיות",
+    "view_observations_map": "צפייה במפת תצפיות",
     "x_uploaded_observations_text_1": {
-      "one": "You posted {{count}} observation to iNaturalist using Seek in {{year}}.",
-      "two": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
-      "few": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
-      "many": "You posted {{count}} observations to iNaturalist using Seek in {{year}}.",
-      "other": "You posted {{count}} observations to iNaturalist using Seek in {{year}}."
+      "one": "העלית {{count}} תצפיות ל-iNaturalist באמצעות Seek בשנת {{year}}",
+      "two": "העלית {{count}} תצפיות ל-iNaturalist באמצעות Seek בשנת {{year}}",
+      "few": "העלית {{count}} תצפיות ל-iNaturalist באמצעות Seek בשנת {{year}}",
+      "many": "העלית {{count}} תצפיות ל-iNaturalist באמצעות Seek בשנת {{year}}",
+      "other": "העלית {{count}} תצפיות ל-iNaturalist באמצעות Seek בשנת {{year}}"
     },
-    "uploaded_observations_text_2": "Thank you for contributing to our community!",
-    "observed_in": "{{speciesName}} observed in {{place}}",
-    "observed_on": "{{speciesName}} observed on {{date}}",
-    "challenges": "Challenges",
+    "uploaded_observations_text_2": "תודה על תרומתך לקהילה שלנו!",
+    "observed_in": "{{speciesName}} נצפה ב{{place}}",
+    "observed_on": "{{speciesName}} נצפה בתאריך {{date}}",
+    "challenges": "אתגרים",
     "x_challenges_earned_text": {
-      "one": "You earned {{count}} challenge badge in {{year}}.",
-      "two": "You earned {{count}} challenge badges in {{year}}.",
-      "few": "You earned {{count}} challenge badges in {{year}}.",
-      "many": "You earned {{count}} challenge badges in {{year}}.",
-      "other": "You earned {{count}} challenge badges in {{year}}."
+      "one": "הרווחת {{count}} תגי אתגר בשנת {{year}}.",
+      "two": "הרווחת {{count}} תגי אתגר בשנת {{year}}.",
+      "few": "הרווחת {{count}} תגי אתגר בשנת {{year}}.",
+      "many": "הרווחת {{count}} תגי אתגר בשנת {{year}}.",
+      "other": "הרווחת {{count}} תגי אתגר בשנת {{year}}."
     },
-    "thank_you": "Thank you for using Seek! We hope that this reminds you of all the interesting species you met this year.",
-    "consider_donation": "As a small team, we greatly appreciate all your love and enthusiasm for Seek. If you’d like to support us as we grow, please consider donating to iNaturalist:",
-    "donate": "Donate"
+    "thank_you": "תודה שהשתמש ב-Seek! אנחנו מקוות ומקווים שזה מזכיר לך את כל המינים המעניינים שפגשת השנה.",
+    "consider_donation": "כצוות קטן, אנו מאוד מעריכות ומעריכים את האהבה וההתלהבות שלך ל-Seek. אם ברצונך לתמוך בצמיחה שלנו, נא לשקול לתרום ל-iNaturalist:",
+    "donate": "לתרומה"
   }
 }
