Add header to home screen section

--- a/translations/en.json
+++ b/translations/en.json
@@ -999,6 +999,7 @@
     "donate": "Donate"
   },
   "announcements": {
+    "header": "iNaturalist Announcements",
     "announcement": "Announcement",
     "close": "Close"
   }
