Change button text

--- a/translations/en.json
+++ b/translations/en.json
@@ -1001,6 +1001,6 @@
   "announcements": {
     "header": "iNaturalist Announcements",
     "announcement": "Announcement",
-    "close": "Close"
+    "dismiss": "Dismiss"
   }
 }
